Añadir endpoints de roles y usuarios a la documentación